# My-First-Tax-Pilar-2-advisore

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CSV_ISSUE_SOLUTION.md  EXCEL_ISSUE_SOLUTION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QA_TAX_QUESTION_SOLUTION.md  README.md  README_AI_MODEL_MANAGEMENT.md  README_CALCULATION_EXPLANATIONS.md  README_DEPENDENCIES.md  README_ENHANCED_QA_SYSTEM.md  README_GUARDRAILS_INTEGRATION.md  README_SERPER_INTEGRATION.md  README_STREAMLIT_CLOUD.md  README_STREAMLIT_CLOUD_FIXES.md  README_UI_FEATURES.md  README_WEB_SCRAPING_INTEGRATION.md  SERPER_INTEGRATION_SUMMARY.md  WEB_SCRAPING_INTEGRATION_SUMMARY.md  agent_thinking_detailed.py  agent_thinking_process.py  agents_report_20250810_093313.json  analyze_csv_results.py  comprehensive_tax_system_test.py  display_agents_report.py  examine_test4.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements-streamlit.txt  requirements.in  requirements.txt  run_agents_test.py  run_backend.py  run_csv_test.py  run_frontend.py  (+12 more)
agents/: README_ENHANCED_DATA_PROCESSING.md  README_RISK_AGENT.md  README_TRANSFER_PRICING_AGENT.md  README_YAML.md  UPGRADE_SUMMARY.md  __init__.py  crew_config.py  crew_config.yaml  data_format_adapter.py  data_validator.py  enhanced_error_handler.py  example_enhanced_usage.py  flexible_data_processor.py  pillar_two_master.py  qa_specialist_agent.py  report_generator.py  tasks_config.yaml  web_scraping_tools.py  yaml_crew_loader.py
backend/: __init__.py  main.py
backend/routes/: __init__.py  analysis.py  enhanced_qa.py  qa.py  recommendations.py  reports.py  upload.py
backend/services/: __init__.py  csv_fixer.py  enhanced_qa_engine.py  excel_fixer.py  financial_analyzer.py  guardrails_service.py  pdf_generator.py  qa_engine.py  recommendation_engine.py  tax_calculator.py  word_generator.py  xml_generator.py
backend/utils/: __init__.py  logger.py
config/: guardrails_config.yaml  secrets.env.example  settings.py
data/examples/: pillar2_test_dataset.csv  test.ipynb  test_pillar_2.csv
data/processed/: .gitkeep
data/uploads/: .gitkeep
frontend/: app.py  gir_generator.py
frontend/.streamlit/: config.toml
reports/pdf/: .gitkeep
reports/word/: .gitkeep
reports/xml/: .gitkeep
